--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>HTML5: Up and Running</title>
+<link rel="stylesheet" href="styles.css" media="screen">
 </head>
 
 <body>
